# minecraft-proxy-rs

./: .gitignore  Building the JAR.md  Cargo.toml  README.md  settings.toml
src/: cipher.rs  functions.rs  main.rs  packet.rs  types.rs  utils.rs
src/clientbound/: login.rs  mod.rs  play.rs  status.rs
src/serverbound/: handshaking.rs  login.rs  mod.rs  status.rs
