[package]
authors = ["zegevlier <iamascratcher@gmail.com>"]
edition = "2018"
name = "mc_proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
base64 = "0.13.0"
cfb8 = "0.6.0"
deadqueue = {version = "0.2.0", features = ["unlimited"]}
dyn-clone = "1.0.4"
maplit = "1.0.2"
miniz_oxide = "0.4.4"
tokio = {version = "1.5.0", features = ["net", "rt-multi-thread", "macros", "io-util"]}
hex = "0.4.3"
env_logger = "0.8.3"
log = "0.4.14"
colored = "2.0.0"
